update blog theme

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -5,4 +5,36 @@ slug: "/about"
 
 Hi!
 
-My name is Sebastian
+My name is Sebastian and I am an avid technologist.
+
+I started my career working as a software engineer for startups. The first startup I joined, AfterYou Pte Ltd provided me a deeper understanding of the story "David and Goliath".
+We were a team of four, fighting against a giant and the champion of the industry.
+Equipped with a strong passion and armed with only our wits and courage, we fought against the bigger and stronger "Goliath".
+Similar to the story, we found a vulnerable spot, our niche in the industry that "Goliath" was not serving well. We attacked that market with everything we had.
+
+With every new customer acquired, we grew stronger and more confident of our product offering. However, we were not "David". We were blind-sided by our success.
+We did not realize that our perceive alignment of product offering was misguided. In addition, due to our exclusivity deal signed, we limited our ability to offer
+our product to a wider audience or pivot to a different offering. We were crushed mercilessly and soon found ourselves without capital to continue the fight.
+Nevertheless, I learnt a great deal from a startup perspective and it shaped my thinking greatly.
+
+The startup ecosystem is small in Singapore and I soon found myself moving to the room adjacent to "AfterYou" joining a different company, "Shopback".
+I joined "Shopback" as the fourth engineer in the team. The company got its first investment and were aiming to expand quickly. As a software engineer, the code was "shit".
+We had server-side code mixed with front-end logic. It was a complete mess from a developer perspective but there was product alignment. Customers were flocking to our platform every day.
+As a result, We were making hot-fixes and incurring technical debt. Compared to "AfterYou", this was a good problem to have. We worked closed to 16 hours a day, 7 days a week to ensure the site is up
+and continue serving our customers well. We refactored the code base more than a dozen times, moving from a monolith to Microservices, PHP to Javascript and building up the capability to launch
+quickly to the different markets. By the time I left "Shopback", I have helped the team launched "Shopback" in 7 countries, translated to 4 different languages, fulfilling more than 1 order per second.Shopback
+
+Having spent about 5 years in startup scene, I wanted a change in environment and applied to join a large MNC, "Amazon". "Amazon" was the giant in many fields and I was intrigued by how
+they remain competitive even with their size. The first team I joined in "Amazon" was in Alexa Shopping. There, I learnt how microservice at scale helped organization to move faster and experience
+real-life case studies on how teams can collaborate effectively and yet autonomously. Each team will set their own vision and mission that are aligned with the domain goals. Together with the leadership team,
+they will write out a key sets of tenet that serve as a guiding star for their team's decision making. With those KPI in place,
+teams are free to use their own creativity to build features that will delight their customers. The same story could be told when
+I went to worked for Alexa NLU (Natural Language Understanding) team where individual domain is responsible for building and maintaining their feature.
+One key take away I had was that there is a need for clear tenet on how your team operate. Effective communication can only happen if everyone know where the boundary lines resides.
+Miscommunication between teams happens when they are not provided with the necessary knowledge on how decisions are made. Writing those keys guiding statements help each team understand
+and navigate communications between them
+
+Having spent 8 years in developing software, I wanted to challenge myself even further. I wanted to use my experience and knowledge to help startup avoid the same mistakes I did. Those
+mistakes are easy to avoid on hindsight but when you are deep in the trench, it is difficult to gain a bird eye view of the situation.
+
+Today, I am proud to join AWS as a solution architect for startup
