--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,7 +1,9 @@
 
-Hi, my name is Sebastian
+> Sebastian has spent his life using his personal and career experiences to help businesses adopt and scale their technologies.
+With his vast experiences in startup and large corporations, he is able to help provide guidance on the pros and cons of architecture choices.
+While his focus is on AWS cloud technologies, he is an avid software engineer and has a keen affectionate for beautiful code.
 
- > I am passionate to help start-up scale their workload.
+
 
 
 
