--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -22,7 +22,7 @@ I joined "Shopback" as the fourth engineer in the team. The company got its firs
 We had server-side code mixed with front-end logic. It was a complete mess from a developer perspective but there was product alignment. Customers were flocking to our platform every day.
 As a result, We were making hot-fixes and incurring technical debt. Compared to "AfterYou", this was a good problem to have. We worked closed to 16 hours a day, 7 days a week to ensure the site is up
 and continue serving our customers well. We refactored the code base more than a dozen times, moving from a monolith to Microservices, PHP to Javascript and building up the capability to launch
-quickly to the different markets. By the time I left "Shopback", I have helped the team launched "Shopback" in 7 countries, translated to 4 different languages, fulfilling more than 1 order per second.Shopback
+quickly to the different markets. By the time I left "Shopback", I have helped the team launched "Shopback" in 7 countries, translated to 4 different languages, fulfilling more than 1 order per second.
 
 Having spent about 5 years in startup scene, I wanted a change in environment and applied to join a large MNC, "Amazon". "Amazon" was the giant in many fields and I was intrigued by how
 they remain competitive even with their size. The first team I joined in "Amazon" was in Alexa Shopping. There, I learnt how microservice at scale helped organization to move faster and experience
